--- a/sections/main-collection.liquid
+++ b/sections/main-collection.liquid
@@ -794,7 +794,7 @@
     margin: 0;
     font-size: .9rem;
   }
-  #content .section {
+  .main-collection-section {
     margin-top: -4rem;
   }
   #content .section.rich-text {
@@ -822,7 +822,7 @@
     .rte p {
       font-size: 1rem;
     }
-    #content .section {
+    .main-collection-section {
       margin-top: -7rem;
     }
   }
