--- a/snippets/pdp-v2-js.liquid
+++ b/snippets/pdp-v2-js.liquid
@@ -777,7 +777,7 @@
 											<animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1s" values="0 50 50;360 50 50" keyTimes="0;1"></animateTransform>
 										</circle>
 										</svg>
-										<h5>LOADING MORE CREAM DATA</h5>
+										<h5>${lifestyleButtonLoadingText}</h5>
 									</div>`;
 									inciData = await loadInciData({
 										creamId: {
